tests/neg/parser-stability-16.scala
class x0[x0] {
  val x1 : x0
}
trait x3 extends x0 { // error
x1 = 0 object  // error // error
// error